# ecli

./: .cirrus.yml  .coderabbit.yaml  .dockerignore  .gitignore  .gitignore.local  AGENTS.md  BUILD_QUICK_REFERENCE.md  BUILD_SYSTEM.md  CHANGELOG.md  CLAUDE.md  CODEX.md  CODE_REVIEW_REPORT.md  LICENSE  MAKEFILE_UPGRADE_SUMMARY.md  Makefile  README.md  THIRD_PARTY_NOTICES.md  Taskfile.yml  audit-report.md  config.toml  ecli.spec  editorlog.txt  flake.nix  instrukcja.md  instrukcja_м.md  key_debugger.py  logg.txt  main.py  new.rs  newyork  newyork.pub  pyproject.toml  pyrightconfig.json  pyz  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties  test_class.py  tree.txt
.claude/: PIPELINE.md  README-claude.md  README.md  build-runbook.md  drift-register.md  project-context.md  release-runbook.md  settings.json  validation-runbook.md
.claude/agents/: build-engineer.md  feature-continuation.md  quality-engineer.md  release-engineer.md  render-stabilizer.md  runtime-engineer.md  software-architect.md  test-harness-builder.md
.claude/commands/: bootstrap.md  package-freebsd.md  package-linux.md  package-macos.md  package-nix.md  package-pypi.md  package-windows.md  release.md  validate.md
.claude/hooks/: block-mutations.sh
.codex/: PIPELINE.md
.codex/prompts/: bootstrap.md  package-freebsd.md  package-linux.md  package-macos.md  package-nix.md  package-pypi.md  package-windows.md  release.md  validate.md
.codex/roles/: build-engineer.md  docs-engineer.md  feature-continuation.md  log-analyst.md  quality-engineer.md  release-engineer.md  render-stabilizer.md  runtime-engineer.md  software-architect.md  test-harness-builder.md  tester.md
.codex/runbooks/: build.md  drift.md  release.md  render-inventory.md  runtime.md  validation.md
.github/workflows/: ci.yml  freebsd-pkg.yml  macos-dmg.yml  macos-validate.yml  project-automation.yml  pypi-validate.yml  release.yml  windows-installer.yml  windows-validate.yml
docker/: build-arch-package.Dockerfile  build-linux-deb.Dockerfile  build-linux-rpm.Dockerfile  build-slackware-package.Dockerfile
docs/: BUILD_FROM_SOURCE.md  INSTALL.md  README-docs.md  README.md  testing-reality-policy.md
docs/adr/: 0001-single-writer-screen.md
docs/architecture/: README-architecture.md  README.md  command-plan-service.md  current-architecture.md  ecli-f4-linter-microservices-design.md  event-and-concurrency-model.md  extensions-layer.md  integration-boundaries.md  module-contracts.md  panel-console-stabilization.md  product-vision.md  runtime-model.md  services-foundation.md  target-architecture.md
docs/archive/: README-archive.md  README.md  architecture.legacy.md  audit_report.legacy.md  build-from-source.legacy.md  engineering_task.legacy.md  freebsd-packaging-notes.legacy.md  install.legacy.md  roadmap.legacy.md
docs/config/: README-config.md  README.md  config-migration-policy.md  config-precedence.md  config-schema.md
docs/contributor/: README-contributor.md  README.md  build-from-source.md  development-setup.md  install.md  local-validation.md  troubleshooting.md
docs/extensions/: README-extensions.md  README.md  ai-provider-runtime.md  diagnostics-linter-layer.md  diagnostics-model.md  extension-guardrails.md  f4-linter-manual-installation.md  plugin-api.md  vmlab-console-and-logs.md  vmlab-implementation-prompt.md  vmlab-overview.md  vmlab-profile-schema.md  vmlab-qmp-client.md  vmlab-runtime-supervisor.md  vmlab-security-model.md
docs/install/: debian.md  macos.md  windows.md
docs/planning/: README-planning.md  README.md  documentation-dod.md  documentation-modernization-plan.md  engineering-plan.md  execution-sequencing.md  gate2-phase0-report.md  migration-map.md  phase1-audit.md  phase1-implementation-log.md  phase1-implementation-report.md  post-merge-defects.md  risk-register.md  roadmap.md
docs/product/: README-product.md  README.md  compatibility-policy.md  feature-scope.md  supported-platforms.md  terminology-and-naming.md
docs/quality/: README-quality.md  README.md  ci-quality-gates.md  performance-and-benchmarks.md  security-review-checklist.md  test-strategy.md
docs/release/: README-release.md  README.md  artifact-contract.md  artifact-verification.md  build-matrix.md  packaging-flows.md  release-checklist.md  release-process.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.2.3.md  v0.2.4.md
logs/: README-logs.md  README.md
packaging/arch/: PKGBUILD
packaging/debian/: ecli-linter-lock.json  verify_deb_minimal_install.sh
packaging/nix/: package.nix
packaging/pyinstaller/: ecli.spec
releases/0.1.0/: ecli-0.1.0.pkg.sha256  ecli_0.1.0_amd64.deb.sha256  ecli_0.1.0_amd64.pkg.sha256  ecli_0.1.0_amd64.rpm.sha256  ecli_0.1.0_freebsd_x86_64.pkg.sha256  ecli_0.1.0_linux_x86_64.deb.sha256  ecli_0.1.0_linux_x86_64.rpm.sha256  manifest.txt  manifest.ucl  staged_files.txt
scripts/: build-and-package-arch.sh  build-and-package-deb.sh  build-and-package-freebsd.sh  build-and-package-macos.sh  build-and-package-opensuse-rpm.sh  build-and-package-rpm.sh  build-and-package-slackware.sh  build-and-package-windows.ps1  build-docker.sh  build-freebsd-pkg.sh  build_and_package_arch.py  build_and_package_deb.py  build_and_package_freebsd.py  build_and_package_macos.py  build_and_package_opensuse_rpm.py  build_and_package_rpm.py  build_and_package_slackware.py  build_docker.py  build_freebsd_pkg.py  build_freebsd_port.py  build_freebsd_port.sh  build_pyinstaller_linux.py  build_pyinstaller_linux.sh  build_pyinstaller_windows.ps1  check-log-invariant.sh  check_log_invariant.py  check_runtime_imports.py  clean_logs.sh  f4_linter_linux_provisioning.py  f4_linter_packaging.py  install_ecli_linters.py  package_appimage.py  package_appimage.sh  package_fpm_deb.sh  package_fpm_rpm.sh  packaging_common.py  provision_f4_linters.py  publish_pypi.py  publish_pypi.sh  sign_checksums.py  (+8 more)
tests/: conftest.py  stubs.py  test_get_file_icon.py  test_smoke.py  test_utils.py  test_version_resolution.py
tools/: Taskfile.yml  freebsd-chroot-build.sh  license_guard.py  re-commit-config.yaml  rename-freebsd-pkg.sh
(+368 files in other folders)
