[build-system]
requires = [ "hatchling>=1.25" ]
build-backend = "hatchling.build"


[project]
name = "ecli"
version = "0.1.0"
description = "ECLI — fast terminal code editor"
readme = "README.md"
requires-python = ">=3.11"
keywords = [
"editor",
"terminal",
"tui",
"curses",
"text-editor",
"developer-tools",
"devops",
"ecli",
"IDE"
]
classifiers = [
"Development Status :: 4 - Beta",
"Environment :: Console :: Curses",
"Intended Audience :: Developers",
"License :: OSI Approved :: Apache Software License",
"Operating System :: OS Independent",
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.11",
"Programming Language :: Python :: 3.12",
"Programming Language :: Python :: 3.13",
"Programming Language :: Python :: Implementation :: CPython",
"Topic :: Text Editors",
"Typing :: Typed"
]
dependencies = [
    "Pygments>=2.19.1",
    "pyperclip>=1.9.0",
    "wcwidth>=0.2.13",
    "chardet>=5.2.0",
    "PyYAML>=6.0.2",
    "toml>=0.10.2",
    "attrs>=24.0.0",
    "typing_extensions>=4.12.2",
    "packaging>=24.1",
    "aiohttp>=3.9.0",
    "pygls>=1.3.1",
    "lsprotocol>=2023.0.1",
    "libcst>=1.5.0",
    "cattrs>=23.2.0",
    "python-dotenv>=1.1.1",
]


[project.license]
text = "Apache-2.0"


[[project.authors]]
name = "Siergej Sobolewski"
email = "s.sobolewski@hotmail.com"


[project.scripts]
ecli = "ecli.main:start"


[project.urls]
Homepage = "https://ecli.io"
Repository = "https://github.com/SSobol77/ecli"
"Bug Tracker" = "https://github.com/SSobol77/ecli/issues"


[project.optional-dependencies]
dev = [
"ruff==0.4.10",
"mypy>=1.10.0",
"mypy-extensions>=1.0.0",
"types-PyYAML>=6.0.12.20240516",
"types-toml>=0.10.8.20240310",
"types-pyperclip>=1.9.0.20220518",
"pytest>=8.4.1",
"pytest-asyncio>=0.23.8",
"pytest-aiohttp>=1.0.5",
"pytest-mock>=3.14.0",
"pytest-cov>=6.0.0",
"coverage>=7.4.0",
"tato>=0.2.3"
]


[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --tb=short --strict-markers"
testpaths = [ "tests" ]
python_files = "test_*.py"
markers = [ "asyncio" ]


[tool.mypy]
files = [ "ecli", "tests" ]
ignore_missing_imports = true
show_error_codes = true
strict = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
no_implicit_optional = true
python_version = "3.13"


[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [ "__pycache__", "*.pyc", ".git" ]


[tool.ruff.lint]
select = [
"E",
"F",
"W",
"C90",
"I",
"UP",
"B",
"N",
"Q",
"PL",
"RET",
"D"
]
ignore = [
"N999",
"E501",
"D203",
"D213",
"D401",
"D205",
"D400",
"D415",
"PLR2004",
"UP045",
"D412",
"UP035"
]


[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [ "D100", "D101", "D102", "D103", "D104", "F401", "E402" ]
"src/ecli/__init__.py" = [ "F401" ]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
extra-standard-library = [ "typing_extensions" ]


[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"


[tool.hatch.build.targets.wheel]
packages = [ "src/ecli" ]
include = [ "ecli/py.typed" ]


[tool.hatch.build.targets.sdist]
include = [
"/ecli",
"/tests",
"/README.md",
"/LICENSE",
"/CHANGELOG.md",
"/pyproject.toml"
]
